# chkdir

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  diff.rs  item.rs  last.rs  last_result.rs  main.rs  new_result.rs  path.rs  walk.rs
src/args/: error.rs  help.rs  mod.rs  version.rs
src/fs/: dir.rs  file.rs  mod.rs
src/item/: mod.rs
src/new/: mod.rs  write.rs
src/options/: error.rs  help.rs  mod.rs
src/result/: diff.rs  last.rs  mod.rs  new.rs
