[package]
name = "chkdir"
version = "0.1.0"
edition = "2021"
description = "Check file changes in the folder."
repository = "https://github.com/sophia-nl/chkdir"
readme = "README.md"
license = "MIT"
keywords = ["chkdir"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
md-5 = "0.10.6"
num_cpus = "1.16.0"
threadpool = "1.8.1"
